k8s/backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  - name: management
    port: 8081
    protocol: TCP
    targetPort: management
...
