k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: myappapi.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello
              port:
                number: 8080
    - host: myappfrontend.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello-frontend
              port:
                number: 80
